Upgrade weather app
