# api/app/serializers/weather_forecast_serializer.rb
@@ -12,7 +12,7 @@
 #
 # Indexes
 #
-#  index_location_and_date  (weather_location_id,current_date)
+#  index_location_and_date  (weather_location_id,current_date) UNIQUE
 #
 class WeatherForecastSerializer < ActiveModel::Serializer
   attributes :id, :current_date, :current, :forecast
